--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#1565D8</color>
+    <color name="lightMagenta">#CCCCFF</color>
 
     <color name="baseWhite">#fffffefe</color>
     <color name="colorTransparent">#00000000</color>
+
+    <color name="buttonDisabledColor">#f3f3f3</color>
 
 </resources>
