--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-<!--    <style name="Theme.JobTop"  parent="Theme.AppCompat.Light.NoActionBar">-->
-<!--        &lt;!&ndash; Primary brand color. &ndash;&gt;-->
-<!--        <item name="colorPrimary">@color/white</item>-->
-<!--        <item name="colorPrimaryVariant">@color/white</item>-->
-<!--        <item name="colorOnPrimary">@color/white</item>-->
-<!--        &lt;!&ndash; Secondary brand color. &ndash;&gt;-->
-<!--        <item name="colorSecondary">@color/teal_200</item>-->
-<!--        <item name="colorSecondaryVariant">@color/teal_700</item>-->
-<!--        <item name="colorOnSecondary">@color/black</item>-->
-<!--        &lt;!&ndash; Status bar color. &ndash;&gt;-->
-<!--        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>-->
-<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-<!--    </style>-->
 
     <style name="Theme.JobTop" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorAccent">@color/blue</item>
@@ -41,5 +26,53 @@
         <item name="android:layout_marginTop">@dimen/marginBase</item>
         <item name="android:layout_marginBottom">@dimen/marginBase</item>
     </style>
+
+    <style name="Text">
+        <item name="font">@font/poppins_medium</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="Text.Link">
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:textColor">@color/baseLinkColor</item>
+    </style>
+
+    <style name="Text.Link.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Text.Black">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="Text.Black.Bold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Text.White">
+        <item name="android:textColor">@color/baseWhite</item>
+    </style>
+
+    <style name="Text.Blue">
+        <item name="android:textColor">@color/blue</item>
+    </style>
+
+    <style name="Text.Gray">
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="parent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
+    <style name="modifiedEditText" parent="parent">
+        <item name="android:textSize">@dimen/textNormalSmall</item>
+<!--        <item name="android:backgroundTint">@color/</item>-->
+    </style>
+
 
 </resources>
