--- a/app/src/main/res/navigation/user_graph.xml
+++ b/app/src/main/res/navigation/user_graph.xml
@@ -2,12 +2,17 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@+id/fragmentMainVacancy"
+    app:startDestination="@+id/fragmentAuthUser"
     android:id="@+id/user_graph">
 
     <fragment
-        android:id="@+id/fragmentMainVacancy"
-        tools:layout="@layout/fragment_main_vacancy"
-        android:name="com.imb.jobtop.fragments.FragmentMainVacancy"
+        android:id="@+id/fragmentAuthUser"
+        tools:layout="@layout/fragment_auth_user"
+        android:name="com.imb.jobtop.fragments.auth.FragmentAuthUser"
         android:label="FragmentMainVacancy" />
+    <fragment
+        android:id="@+id/fragmentRegistrationUser"
+        tools:layout="@layout/fragment_registration_user"
+        android:name="com.imb.jobtop.fragments.auth.FragmentRegistrationUser"
+        android:label="FragmentRegistrationUser" />
 </navigation>
