--- a/app/src/main/res/layout/view_infin_two_color_text_view.xml
+++ b/app/src/main/res/layout/view_infin_two_color_text_view.xml
@@ -12,6 +12,7 @@
 
     <TextView
         android:id="@+id/text2"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
