--- a/app/src/main/res/layout/list_item_job.xml
+++ b/app/src/main/res/layout/list_item_job.xml
@@ -17,8 +17,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
-            android:textColor="@color/black"
+            android:textColor="@color/blue"
             android:textSize="20sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/jobEmployerText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
