--- a/app/src/main/res/navigation/user_graph.xml
+++ b/app/src/main/res/navigation/user_graph.xml
@@ -2,14 +2,25 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:startDestination="@+id/fragmentMainVacancy"
+    app:startDestination="@+id/fragmentSplash"
     android:id="@+id/user_graph">
 
     <fragment
-        android:id="@+id/fragmentMainVacancy"
-        tools:layout="@layout/fragment_main_vacancy"
-        android:name="com.imb.jobtop.fragments.FragmentMainVacancy"
+        android:id="@+id/fragmentAuthUser"
+        tools:layout="@layout/fragment_auth_user"
+        android:name="com.imb.jobtop.fragments.auth.FragmentAuthUser"
         android:label="FragmentMainVacancy" />
+    <fragment
+        android:id="@+id/fragmentRegistrationUser"
+        tools:layout="@layout/fragment_registration_user"
+        android:name="com.imb.jobtop.fragments.auth.FragmentRegistrationUser"
+        android:label="FragmentRegistrationUser" />
+    <fragment
+        android:id="@+id/fragmentSplash"
+        tools:layout="@layout/fragment_splash_screen"
+        android:name="com.imb.jobtop.fragments.FragmentSplash"
+        android:label="FragmentSplash" />
+
     <fragment
         tools:layout="@layout/fragment_job_list"
         android:id="@+id/jobListFragment"
@@ -20,4 +31,5 @@
         android:id="@+id/jobDetailFragment"
         android:name="com.imb.jobtop.fragments.JobDetailFragment"
         android:label="JobDetailFragment" />
+
 </navigation>
