--- a/app/src/main/res/drawable/bg_search_view.xml
+++ b/app/src/main/res/drawable/bg_search_view.xml
@@ -2,5 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#F4F6F9"/>
     <corners android:radius="20dp"/>
+    <stroke android:color="#F4F6F9" android:width="10dp"/>
 
 </shape>
