--- a/app/src/main/res/layout/fragment_main_vacancy.xml
+++ b/app/src/main/res/layout/fragment_main_vacancy.xml
@@ -5,8 +5,7 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
+    android:fitsSystemWindows="true">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,10 +21,10 @@
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/drawerBtn"
-                android:padding="10dp"
-                android:background="@color/colorTransparent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/colorTransparent"
+                android:padding="10dp"
                 android:src="@drawable/ic_round_menu_24" />
 
 
@@ -123,23 +122,12 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="5dp"
-            app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/headerText2"
             tools:listitem="@layout/list_item_job" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            app:itemIconTint="@color/blue"
-            app:itemTextColor="@color/blue"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/jobList"
-            app:layout_constraintVertical_bias="1"
-            app:menu="@menu/bottom_navigation_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
