--- a/app/src/main/res/layout/fragment_auth_user.xml
+++ b/app/src/main/res/layout/fragment_auth_user.xml
@@ -68,36 +68,36 @@
                 android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/marginBase"
-            android:gravity="center">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginBottom="@dimen/marginBase"-->
+<!--            android:gravity="center">-->
 
-            <CheckBox
-                android:id="@+id/appRulesCheckbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+<!--            <CheckBox-->
+<!--                android:id="@+id/appRulesCheckbox"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content" />-->
 
-            <TextView
-                android:id="@+id/appRulesBtn"
-                style="@style/Text.Link"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="2dp"
-                android:text="@string/ilova_qoidalari"
-                android:textSize="@dimen/textNormalSmall" />
+<!--            <TextView-->
+<!--                android:id="@+id/appRulesBtn"-->
+<!--                style="@style/Text.Link"-->
+<!--                android:background="?attr/selectableItemBackground"-->
+<!--                android:clickable="true"-->
+<!--                android:focusable="true"-->
+<!--                android:padding="2dp"-->
+<!--                android:text="@string/ilova_qoidalari"-->
+<!--                android:textSize="@dimen/textNormalSmall" />-->
 
-            <TextView
-                style="@style/Text.Gray"
-                android:background="?attr/selectableItemBackground"
-                android:padding="4dp"
-                android:text="bilan tanishdim"
-                android:textSize="@dimen/textNormal" />
+<!--            <TextView-->
+<!--                style="@style/Text.Gray"-->
+<!--                android:background="?attr/selectableItemBackground"-->
+<!--                android:padding="4dp"-->
+<!--                android:text="bilan tanishdim"-->
+<!--                android:textSize="@dimen/textNormal" />-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
     </LinearLayout>
 
